reworked Wikipedia entries in biblatex file

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -6930,9 +6930,9 @@
    "source": [
     "## Decision graph for selecting an suitable algorithm\n",
     "\n",
-    "Now that the iris dataset has been analyzed in terms of its data structure and internal correlations, the most difficult task on the way to solving a problem using machine learning arises: finding the \"right\" ML algorithm (also called **estimator**).\n",
+    "Now that the Iris dataset has been analyzed in terms of its data structure and internal correlations, the most difficult task on the way to solving a problem using machine learning arises: finding the \"right\" ML algorithm (also called **estimator**).\n",
     "\n",
-    "The diverse estimators available are more or less well qualified for the respective problems with their partly very different data types. The good news is that the ML software package **Scikit-Learn** provides the following **flowchart** as a rough **guide** in choosing the right estimator for the particular task (see: [Choosing the right estimator](https://scikit-learn.org/stable/tutorial/machine_learning_map/index.html)).\n",
+    "The diverse estimators available are more or less well qualified for the respective problems with their partly very different data types. The good news is that the ML software package `Scikit-Learn` provides the following **flowchart** as a rough **guide** in choosing the right estimator for the particular task (see: [Choosing the right estimator](https://scikit-learn.org/stable/tutorial/machine_learning_map/index.html)).\n",
     "\n",
     "However, it must also be emphasized that a considerable **level of experience** through systematic trial and error is crucial to be successful in finding an \"optimal\" estimator."
    ]
@@ -7030,7 +7030,7 @@
    "id": "5792089b-751d-4508-8d50-d8ff7dd24bf4",
    "metadata": {},
    "source": [
-    "![Transformation of 1-dimensional data into 2-dimensional space in order to separate the data by a linear hyperplane. (source: Kasper, license: CC BY-SA 4.0)](images/SVC_transformation.png)"
+    "![Transformation of 1-dimensional data into 2-dimensional space in order to separate the data by a linear hyperplane (source: Kasper, license: CC BY-SA 4.0)](images/SVC_transformation.png)"
    ]
   },
   {
@@ -9273,7 +9273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.6"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
