--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -181,7 +181,7 @@
 }
 
 @Online{Wiki_IrisDS,
-  author   = {Wikipedia{: }Iris{ }dataset},
+  author   = {Wikipedia{: }{Iris dataset}},
   date     = {2022-08-08},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   title    = {Iris flower data set},
@@ -218,7 +218,7 @@
 }
 
 @Online{Wiki_Iris_setosa,
-  author   = {Wikipedia{: }Iris{ }setosa},
+  author   = {Wikipedia{: }{Iris setosa}},
   date     = {2022-08-05},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   title    = {Iris setosa},
@@ -229,7 +229,7 @@
 }
 
 @Online{Wiki_Iris_virginica,
-  author   = {Wikipedia{: }Iris{ }virginica},
+  author   = {Wikipedia{: }{Iris virginica}},
   date     = {2022-06-21},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   title    = {Iris virginica},
@@ -240,7 +240,7 @@
 }
 
 @Online{Wiki_Iris_versicolor,
-  author   = {Wikipedia{: }Iris{ }versicolor},
+  author   = {Wikipedia{: }{Iris versicolor}},
   date     = {2022-06-04},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   title    = {Iris versicolor},
@@ -602,7 +602,7 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
 }
 
 @Online{Wiki_SVM,
-  author   = {Wikipedia{: }Support-vector{ }machine},
+  author   = {Wikipedia{: }{Support-vector machine}},
   date     = {2022-09-01},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   keywords = {URL},
@@ -613,7 +613,7 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
 }
 
 @Online{Wiki_Supervised_learning,
-  author   = {Wikipedia{: }Supervised{ }learning},
+  author   = {Wikipedia{: }{Supervised learning}},
   date     = {2022-08-31},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   keywords = {URL},
@@ -624,7 +624,7 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
 }
 
 @Online{Wiki_Unsupervised_learning,
-  author   = {Wikipedia{: }Unsupervised{ }learning},
+  author   = {Wikipedia{: }{Unsupervised learning}},
   date     = {2022-08-28},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   keywords = {URL},
@@ -635,7 +635,7 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
 }
 
 @Online{Wiki_Semi-supervised_learning,
-  author   = {Wikipedia{: }Semi-supervised{ }learning},
+  author   = {Wikipedia{: }{Semi-supervised learning}},
   date     = {2022-09-20},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   keywords = {URL},
@@ -646,7 +646,7 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
 }
 
 @Online{Wiki_Reinforcement_learning,
-  author   = {Wikipedia{: }Reinforcement{ }learning},
+  author   = {Wikipedia{: }{Reinforcement learning}},
   date     = {2022-09-16},
   editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
   keywords = {URL},
