--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -9502,9 +9502,16 @@
   {
    "cell_type": "markdown",
    "id": "1a86efdc-ba8b-4a68-8fa2-accfd4b7e461",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "TODO_Summary"
+    ]
+   },
    "source": [
     "# Summary and outlook\n",
+    "\n",
+    "**@TODO:**\n",
+    "Add english and german summary and outlook (e.g. substitute Iris dataset by Penguin dataset for didactical reasons).\n",
     "\n",
     "## English summary"
    ]
@@ -9520,11 +9527,25 @@
   {
    "cell_type": "markdown",
    "id": "9547f58e-97d5-46dd-99f0-df11138a9ea7",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "TODO_acknowledgments"
+    ]
+   },
    "source": [
     "# Acknowledgments\n",
-    "\n"
+    "\n",
+    "**@TODO:**\n",
+    "Add acknowledgments to colleagues at the testing lab, Prof. Steimers, and my family."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a02c28f7-772b-4ab7-aea3-89c3050918b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -9561,7 +9582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.3"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
@@ -9574,7 +9595,7 @@
   "toc-autonumbering": true,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false,
-  "toc-showtags": false
+  "toc-showtags": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
