added english translation to summary

--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -686,4 +686,26 @@ Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbeglei
   keywords = {URL},
 }
 
+@Online{palmerpenguins_R_2020,
+  author   = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
+  date     = {2020-07-16},
+  title    = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
+  url      = {https://allisonhorst.github.io/palmerpenguins/},
+  note     = {R package version 0.1.0},
+  doi      = {10.5281/zenodo.3960218},
+  language = {English},
+  urldate  = {2022-10-04},
+  keywords = {URL},
+}
+
+@Online{palmerpenguins_Python_2020,
+  author   = {Muhammad Chenariyan Nakhaee},
+  date     = {2021-12-17},
+  title    = {Palmerpenguins as Python package},
+  url      = {https://github.com/mcnakhaee/palmerpenguins},
+  language = {English},
+  urldate  = {2022-10-04},
+  keywords = {URL},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
